# Maco

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py  setup_model_only.py  tox.ini
demo_extractors/: elfy.py  limit_other.py  nothing.py  requirements.txt  shared.py  terminator.py  warnedbyyarax.py
demo_extractors/complex/: complex.py  complex_utils.py
extractor_setup/: maco  pyproject.toml
maco/: base_test.py  cli.py  collector.py  exceptions.py  extractor.py  formatter.py  model.py  utils.py  yara.py
maco/model/: __init__.py  base_formatter.py  formatter.py  helpers.py  human_formatter.py  machine_formatter.py  model.py
model_setup/: pyproject.toml  setup.py
pipelines/: publish.yaml  test.yaml
tests/: benchmark.py  git  pytest.ini  requirements.txt  test_base_test.py  test_cli.py  test_demo_extractors.py  test_detection.py  test_extractor.py  test_helpers.py  test_model.py  test_parallelism.py
tests/data/: example.txt  example.txt.cart  trigger_complex.txt  trigger_complex.txt.cart
tests/extractors/: basic.py  basic_longer.py  test_basic.py
tests/extractors/bob/: bob.py
tests/extractors/import_rewriting/: importer.py
