[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "maco"
dynamic = ["version", "readme", "dependencies"]
requires-python = ">=3.8"
authors = [{ name = "sl-govau" }]
maintainers = [{ name = "cccs-rs" }]
license = { file = "LICENSE.md" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",

    "Topic :: Software Development :: Libraries :: Python Modules",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
maco = "maco.cli:main"

[project.urls]
Repository = "https://github.com/CybercentreCanada/Maco"
Issues = "https://github.com/CybercentreCanada/Maco/issues"

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test", "tests", "extractors", "model_setup"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "D", "DOC"]
ignore = ["D104"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"
